--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 click = "^8.1.7"
 
+[tool.poetry.scripts]
+esphome-plus = 'esphome_plus.cli:run'
 
 [build-system]
 requires = ["poetry-core"]
